# GameEngineBook

./: .gitignore  Engine.cpp  GameEngineBook.sln  GameEngineBook.vcxproj  GameEngineBook.vcxproj.filters  Particle.cpp  Particle.h  README.md  circle.vert  globalConstants.h  objects.cpp  objects.h  windowFunctions.cpp
BallisticsTest/: BallisticsTest.cpp  BallisticsTest.vcxproj  BallisticsTest.vcxproj.filters  CMakeLists.txt  ballistic.cpp  ballistics.h  globalConstants.h  objects.cpp  objects.h  windowFunctions.cpp  windowFunctions.h
BallisticsTest/x64/Debug/: BallisticsTest.exe.recipe  BallisticsTest.ilk  vc143.idb
BallisticsTest/x64/Debug/BallisticsTest.tlog/: BallisticsTest.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
FireWorksTest/: FireWorksTest.vcxproj  FireWorksTest.vcxproj.filters  firework.cpp  firework.h  main.cpp
GameEngineBook/x64/Debug/: GameEngineBook.exe.recipe  GameEngineBook.ilk  vc143.idb
GameEngineBook/x64/Debug/GameEngineBook.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GameEngineBook.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
gameLib/: Particle.cpp  Particle.h  core.h
